...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_create_event_fragment"
    tools:context=".ui.event.CreateEventFragment">

...

                <Button
                    android:id="@+id/cancel_create_event"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
...

                <Button
                    android:id="@+id/submit_create_event"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/inputDate"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/inputDate" />
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/all_day"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
...
                                android:textSize="20sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="@id/inputTimeFrom"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@id/inputTimeFrom" />
...

                            <Button
                                android:id="@+id/inputTimeTo"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:layout_width="wrap_content"
...

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/conflict_check"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/repeat_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                            android:layout_gravity="center"
                            android:layout_weight="0.75"
                            android:labelFor="@id/spRepeatEvery_autocomplete">

                            <AutoCompleteTextView
...
                            android:layout_gravity="center"
                            android:layout_weight="1.25"
                            android:labelFor="@id/spRepetitionInterval_autocomplete">

                            <AutoCompleteTextView
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_notes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
