<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_event"
        android:icon="@drawable/ic_baseline_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/show_past_events"
        android:title="@string/past_events"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/show_future_events"
        android:title="@string/future_events"
        app:showAsAction="always" />
</menu>