<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_calendar_main"
    android:layout_marginTop="@dimen/margin"
    tools:context=".ui.calendar.CalendarFragment">

    <data>

        <variable
            name="viewModel"
            type="ca.nomosnow.cmpt370_9mare.ui.calendar.CalendarViewModel" />

        <variable
            name="calendarFragment"
            type="ca.nomosnow.cmpt370_9mare.ui.calendar.CalendarFragment" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/button_last_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_last_month"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:onClick="@{()-> calendarFragment.goToPreviousMonth()}"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/showMonthYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@{viewModel.monthYearText}"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/next_month_calendar"
            app:layout_constraintStart_toEndOf="@id/button_last_month"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Month Year" />

        <ImageView
            android:id="@+id/next_month_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/base_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/next_month_calendar"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:onClick="@{()->calendarFragment.goToNextMonth()}"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/month_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/showMonthYear">

            <TextView
                android:id="@+id/sunday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sunday"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monday"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuesday"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wednesday"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thursday"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/friday"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saturday"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/month_calendar_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/month_calendar"
            app:listData="@{viewModel.daysOfTheMonth}"
            app:spanCount="7"
            tools:itemCount="35"
            tools:listitem="@layout/calendar_cell_layout" />

        <View
            android:id="@+id/pick_date_time_separator"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_margin="10dp"
            android:background="#c0c0c0"
            app:layout_constraintTop_toBottomOf="@id/month_calendar_grid" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pick_date_time_separator">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/daily_event_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:clipToPadding="false"
                android:focusable="true"
                android:padding="@dimen/base_margin"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/daily_event_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/add_new_item"
            android:text="@string/add_new_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_input_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>






